[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Towers/Launcher/Base.png" type="Texture" id=1]
[ext_resource path="res://assets/Towers/Launcher/Cannon.png" type="Texture" id=2]
[ext_resource path="res://src/Launcher/Launcher.gd" type="Script" id=5]
[ext_resource path="res://src/Launcher/TEMP/pointer.png" type="Texture" id=7]
[ext_resource path="res://src/Launcher/LauncherStateMachine.gd" type="Script" id=8]
[ext_resource path="res://src/Fonts/DigitalDisco.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/Predictor/Predictor.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 56.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Launcher" type="Node2D"]
script = ExtResource( 5 )

[node name="Barrel" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )

[node name="Projectile_Spawn" type="Position2D" parent="Barrel"]
position = Vector2( 0, -4 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 8, -16 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -48.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Launch_Mats" type="VBoxContainer" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Launch" type="Button" parent="Control/Launch_Mats"]
margin_right = 62.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 9 )
text = "Launch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Control/Launch_Mats"]
margin_top = 26.0
margin_right = 62.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 9 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_Position" type="Position2D" parent="."]
position = Vector2( 0, -24 )

[node name="Manning_Position" type="Position2D" parent="."]
position = Vector2( 36, -12 )

[node name="Mouse_Area" type="Area2D" parent="."]
position = Vector2( 0, -12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse_Area"]
shape = SubResource( 1 )

[node name="Launch_Direction" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -28 )
texture = ExtResource( 7 )

[node name="State_Machine" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Predictor" parent="." instance=ExtResource( 10 )]

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -52.0
margin_right = 20.0
margin_bottom = -38.0
text = "God"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Player_Detection" type="Area2D" parent="."]
position = Vector2( 32, -8 )
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detection"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="pressed" from="Control/Launch_Mats/Launch" to="State_Machine" method="_on_Launch_Button_pressed"]
[connection signal="pressed" from="Control/Launch_Mats/Back" to="State_Machine" method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Mouse_Area" to="State_Machine" method="_on_Mouse_Area_mouse_entered"]
[connection signal="mouse_exited" from="Mouse_Area" to="State_Machine" method="_on_Mouse_Area_mouse_exited"]
